--- a/src/app/components/common/loading-spinner/loading-spinner.component.scss
+++ b/src/app/components/common/loading-spinner/loading-spinner.component.scss
@@ -4,11 +4,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: calc(60vh - 6rem);
+    height: calc(60svh - 6rem);
     width: 100%;
     position: relative;
     z-index: 800;
-    @media (max-width: $tablet-width) { height: calc(50vh - 5.5rem); }
+    @media (max-width: $tablet-width) { height: calc(50svh - 6.25rem); }
 }
 
 .lds-default {
